net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkSecurityGroupTests/NetworkSecurityGroupWithRulesApiTest[2018-11-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-6b99c2982a4cc52f8c15ba571d2c6673-39cec3ab38135210-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6d1feafa0ac0526f08e510afb8e95c9a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:16 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "40b21db1-e736-45c3-a4ff-77f41bf4786a",
        "x-ms-ratelimit-remaining-subscription-reads": "10910",
        "x-ms-request-id": "40b21db1-e736-45c3-a4ff-77f41bf4786a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153717Z:40b21db1-e736-45c3-a4ff-77f41bf4786a"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg182?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-6585205dd376bc6f34fc006ac6e12731-4574b1cd8ead514b-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3f7d5c7931134867fe42663be805aa6e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Connection": "close",
        "Content-Length": "213",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:17 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "34c74f5e-5873-48ee-abf3-a128aec0fcfb",
        "x-ms-ratelimit-remaining-subscription-writes": "919",
        "x-ms-request-id": "34c74f5e-5873-48ee-abf3-a128aec0fcfb",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153718Z:34c74f5e-5873-48ee-abf3-a128aec0fcfb"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182",
        "name": "csmrg182",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "313",
        "Content-Type": "application/json",
        "traceparent": "00-60a1e5c262158eaa59cf3d108dce33cc-0e7cea1996dfa3f5-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6fde583be2424ae522026de2bb32b279",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/624f7cc9-ceff-4f48-8e58-ce257b7e3d12?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "7464",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "14921c8e-753e-44ba-9a41-4a8f3ba36446",
        "x-ms-client-request-id": "6fde583be2424ae522026de2bb32b279",
        "x-ms-correlation-request-id": "2a9db31a-d331-461d-adb8-f72382f04b67",
        "x-ms-ratelimit-remaining-subscription-writes": "1199",
        "x-ms-request-id": "624f7cc9-ceff-4f48-8e58-ce257b7e3d12",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153723Z:2a9db31a-d331-461d-adb8-f72382f04b67"
      },
      "ResponseBody": {
        "name": "azsmnet3195",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
        "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
          "securityRules": [
            {
              "name": "azsmnet1244",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
              "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"6fbc0efa-c3b1-4695-b8e8-03b92d845d09\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/624f7cc9-ceff-4f48-8e58-ce257b7e3d12?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-60a1e5c262158eaa59cf3d108dce33cc-d3415a57f6103b38-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e65f719fed9b5d3a2de74446905fab09",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:23 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7888d41d-160a-438a-95c9-f5b11ef7ee23",
        "x-ms-client-request-id": "e65f719fed9b5d3a2de74446905fab09",
        "x-ms-correlation-request-id": "3028831b-10a8-4aa3-a595-c25443913063",
        "x-ms-ratelimit-remaining-subscription-reads": "11999",
        "x-ms-request-id": "05a4e7f4-c613-4d66-ac9e-0743e38b8db4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153723Z:3028831b-10a8-4aa3-a595-c25443913063"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-60a1e5c262158eaa59cf3d108dce33cc-1c4e180aa18092fb-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "17928c3563668331331ba73acbc56abc",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7472",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:23 GMT",
        "ETag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "1cace901-effb-47b6-8603-582b8da4f008",
        "x-ms-client-request-id": "17928c3563668331331ba73acbc56abc",
        "x-ms-correlation-request-id": "1c554cbe-64be-4584-903e-9ff4d61fd4cf",
        "x-ms-ratelimit-remaining-subscription-reads": "11998",
        "x-ms-request-id": "acbeb80c-c8d4-41c9-b3b8-ae3c03a13b49",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153724Z:1c554cbe-64be-4584-903e-9ff4d61fd4cf"
      },
      "ResponseBody": {
        "name": "azsmnet3195",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
        "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
          "securityRules": [
            {
              "name": "azsmnet1244",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-5e2079119490032d647d3ebbebdfd39e-c8e5b5154fa034eb-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "494313c1cbd32ade1c9bb9d173de3168",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "7472",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:24 GMT",
        "ETag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3f9dfa00-9a38-42a2-bde6-696c5710adf6",
        "x-ms-client-request-id": "494313c1cbd32ade1c9bb9d173de3168",
        "x-ms-correlation-request-id": "ea5f0da1-394c-44cc-91d5-22d4a26f9485",
        "x-ms-ratelimit-remaining-subscription-reads": "11997",
        "x-ms-request-id": "ba6341b0-22e3-4d43-8ec7-fb91b9beb119",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153724Z:ea5f0da1-394c-44cc-91d5-22d4a26f9485"
      },
      "ResponseBody": {
        "name": "azsmnet3195",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
        "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
          "securityRules": [
            {
              "name": "azsmnet1244",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-ca779b84065b5a52bbc48ed89a1a02bd-8c35bb0f86cc5a8d-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "53ea0d5d29d33cf33fdbb27f46ff9168",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "8173",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:24 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "cf0e7be0-b127-483f-91cf-1247fb34a142",
        "x-ms-client-request-id": "53ea0d5d29d33cf33fdbb27f46ff9168",
        "x-ms-correlation-request-id": "8c9cdb06-322e-438e-a65f-b06d9e2ba8f2",
        "x-ms-ratelimit-remaining-subscription-reads": "11996",
        "x-ms-request-id": "01ce1fda-e930-4e36-8196-e82b0ee7418d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153725Z:8c9cdb06-322e-438e-a65f-b06d9e2ba8f2"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet3195",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
            "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
              "securityRules": [
                {
                  "name": "azsmnet1244",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Test security rule",
                    "protocol": "Tcp",
                    "sourcePortRange": "655",
                    "destinationPortRange": "123-3500",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-33591cea4183d98ef6fac3687e2e52f8-ae514e76c7f499b1-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7c84877c611c6a35ae67fbcaaa601055",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "52283",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "85235673-b5d2-4bf1-92ea-31b7a68e4cd4",
        "x-ms-original-request-ids": [
          "1705e612-65b4-4a4e-bcfe-4b83023e88ff",
          "309c2c27-0a59-404e-949a-4854ca5ff204",
          "57e8f796-27f1-4b18-bae1-8f2d4cecb9f1"
        ],
        "x-ms-ratelimit-remaining-subscription-reads": "11995",
        "x-ms-request-id": "85235673-b5d2-4bf1-92ea-31b7a68e4cd4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153726Z:85235673-b5d2-4bf1-92ea-31b7a68e4cd4"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "azsmnet3195",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
            "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus",
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
              "securityRules": [
                {
                  "name": "azsmnet1244",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Test security rule",
                    "protocol": "Tcp",
                    "sourcePortRange": "655",
                    "destinationPortRange": "123-3500",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"f3b79cc0-16f9-497e-a3a3-52c591fa5372\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ]
            }
          },
          {
            "name": "NRMS-runnztc2q22ruvnet-1199",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199",
            "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "e6a69935-ad4a-443d-b177-0e6d0bdf2898",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/networkSecurityGroups/NRMS-runnztc2q22ruvnet-1199/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"290fbe5f-145b-4513-bfb1-ad71c4af0edf\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481-remote3540/providers/Microsoft.Network/virtualNetworks/vnet-1199/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-77ii2aynewgdavnet-hdi-0809",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809",
            "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "eastus",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "bc057244-e333-4981-aebc-f99f3f7378d6",
              "securityRules": [
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-106",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-103",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-107",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-108",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-101",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-105",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-109",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/securityRules/NRMS-Rule-104",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/networkSecurityGroups/NRMS-77ii2aynewgdavnet-hdi-0809/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"63614dcd-6a78-4cdd-b1ca-c3ada646daa0\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testRG-333/providers/Microsoft.Network/virtualNetworks/vnet-hdi-0809/subnets/default"
                }
              ]
            }
          },
          {
            "name": "NRMS-3ammvlly5cgsyvnet-6379",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379",
            "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "85893a4b-a3d3-4d53-8bc5-af1af6dc1bc9",
              "securityRules": [
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-107",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-106",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-104",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-101",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-109",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-108",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-105",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/securityRules/NRMS-Rule-103",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/networkSecurityGroups/NRMS-3ammvlly5cgsyvnet-6379/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"6a408af9-95ea-40c2-ab88-00575bc23602\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-4494/providers/Microsoft.Network/virtualNetworks/vnet-6379/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-a4mwcm5uxdxl4vnet-8017",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017",
            "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "09a97d6c-aac9-41fe-b97b-c2e316761813",
              "securityRules": [
                {
                  "name": "NRMS-Rule-101",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-101",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, placeholder you can delete, please see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-107",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-107",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 107,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "23",
                      "135",
                      "445",
                      "5985",
                      "5986"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-109",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-109",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 109,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "119",
                      "137",
                      "138",
                      "139",
                      "161",
                      "162",
                      "389",
                      "636",
                      "2049",
                      "2301",
                      "2381",
                      "3268",
                      "5800",
                      "5900"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-105",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-105",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 105,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "1433",
                      "1434",
                      "3306",
                      "4333",
                      "5432",
                      "6379",
                      "7000",
                      "7001",
                      "7199",
                      "9042",
                      "9160",
                      "9300",
                      "16379",
                      "26379",
                      "27017"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-106",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-106",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 106,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "22",
                      "3389"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-104",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-104",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetSaw",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 104,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-108",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-108",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "DO NOT DELETE - Will result in ICM Sev 2 - Azure Core Security, see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 108,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [
                      "13",
                      "17",
                      "19",
                      "53",
                      "69",
                      "111",
                      "123",
                      "512",
                      "514",
                      "593",
                      "873",
                      "1900",
                      "5353",
                      "11211"
                    ],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "NRMS-Rule-103",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/securityRules/NRMS-Rule-103",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Created by Azure Core Security managed policy, rule can be deleted but do not change source ips, please see aka.ms/cainsgpolicy",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "CorpNetPublic",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 103,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/networkSecurityGroups/NRMS-a4mwcm5uxdxl4vnet-8017/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"70b3ca70-2dc9-46b0-b697-b1ab4bd6bda5\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/FirewallPolicyRG-5571/providers/Microsoft.Network/virtualNetworks/vnet-8017/subnets/Default"
                }
              ]
            }
          },
          {
            "name": "NRMS-kbijcrymaw3z6vnet-5947",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947",
            "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "westus2",
            "tags": {
              "Creator": "Automatically added by NRMS Azure Policy",
              "NRMS-Info": "http://aka.ms/nrms",
              "NRMS-Version": "2019-03-20"
            },
            "properties": {
              "provisioningState": "Succeeded",
              "resourceGuid": "3f6bbd65-1b02-4e21-b2f4-ed8aa9ce1921",
              "securityRules": [],
              "defaultSecurityRules": [
                {
                  "name": "AllowVnetInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowAzureLoadBalancerInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowAzureLoadBalancerInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow inbound traffic from azure load balancer",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllInBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllInBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowVnetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowVnetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 65000,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "AllowInternetOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/AllowInternetOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Allow outbound traffic from all VMs to Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Allow",
                    "priority": 65001,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                  "name": "DenyAllOutBound",
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/networkSecurityGroups/NRMS-kbijcrymaw3z6vnet-5947/defaultSecurityRules/DenyAllOutBound",
                  "etag": "W/\"5c5b7bfc-3165-46f5-b91e-e79f25b3e015\"",
                  "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
                  "properties": {
                    "provisioningState": "Succeeded",
                    "description": "Deny all outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 65500,
                    "direction": "Outbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                }
              ],
              "subnets": [
                {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/testNetAppDotNetSDKRG-6481/providers/Microsoft.Network/virtualNetworks/vnet-5947/subnets/default"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "581",
        "Content-Type": "application/json",
        "traceparent": "00-1ecefcb28c956accb68eda9ae51366f2-d853b828a2e31563-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bddd3fea17da98e820060af8195ee41c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            },
            {
              "properties": {
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/996eafca-0008-4825-a10e-c07f0fe61aaa?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "8420",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a08b7a1e-176c-4eee-91f1-c7b41e972b8d",
        "x-ms-client-request-id": "bddd3fea17da98e820060af8195ee41c",
        "x-ms-correlation-request-id": "8be37b19-83b7-4adc-af4f-d924ec2f9449",
        "x-ms-ratelimit-remaining-subscription-writes": "1198",
        "x-ms-request-id": "996eafca-0008-4825-a10e-c07f0fe61aaa",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153726Z:8be37b19-83b7-4adc-af4f-d924ec2f9449"
      },
      "ResponseBody": {
        "name": "azsmnet3195",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
        "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
          "securityRules": [
            {
              "name": "azsmnet1244",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "azsmnet7530",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet7530",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"88974c98-9c23-45c7-aeda-0493c66e23e2\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/996eafca-0008-4825-a10e-c07f0fe61aaa?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1ecefcb28c956accb68eda9ae51366f2-658695e8778d36d1-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "06955ccbd322658e9eeb5c16573d5150",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a1116c2b-1910-48bd-bde3-00b7e9ef647c",
        "x-ms-client-request-id": "06955ccbd322658e9eeb5c16573d5150",
        "x-ms-correlation-request-id": "13a374da-3c66-402a-ae48-416a99a23e7b",
        "x-ms-ratelimit-remaining-subscription-reads": "11994",
        "x-ms-request-id": "d78f6395-2ba1-4b8a-9f5f-534302c124ad",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153727Z:13a374da-3c66-402a-ae48-416a99a23e7b"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1ecefcb28c956accb68eda9ae51366f2-5c3e06ebb4b4318b-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "59c0de83240b35fcf3e1e55a727c6bf8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "8429",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:26 GMT",
        "ETag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f8067dca-3179-4c46-bd8b-ced71ebe5dd5",
        "x-ms-client-request-id": "59c0de83240b35fcf3e1e55a727c6bf8",
        "x-ms-correlation-request-id": "3609366a-ec04-4eda-be95-57b6b5b37bfd",
        "x-ms-ratelimit-remaining-subscription-reads": "11993",
        "x-ms-request-id": "755f3797-f6b9-4d87-9c7f-34bedf273847",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153727Z:3609366a-ec04-4eda-be95-57b6b5b37bfd"
      },
      "ResponseBody": {
        "name": "azsmnet3195",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
        "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
          "securityRules": [
            {
              "name": "azsmnet1244",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "azsmnet7530",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet7530",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-ecdcceb9732a6efbb71ffdc504c2d192-31880fd9a05a6020-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "bc2c2a74ddc837fac2ef4c6d5835a49b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "8429",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:27 GMT",
        "ETag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "568b714b-3671-4636-b03b-937c6e73b07a",
        "x-ms-client-request-id": "bc2c2a74ddc837fac2ef4c6d5835a49b",
        "x-ms-correlation-request-id": "92a4a942-7a4a-42bd-87a0-5c5a18620c7a",
        "x-ms-ratelimit-remaining-subscription-reads": "11992",
        "x-ms-request-id": "60d273d5-9543-4a1e-ab35-44b48a81ab5f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153727Z:92a4a942-7a4a-42bd-87a0-5c5a18620c7a"
      },
      "ResponseBody": {
        "name": "azsmnet3195",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195",
        "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "20c8a420-bf46-49e9-aabc-7227cc8ff619",
          "securityRules": [
            {
              "name": "azsmnet1244",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet1244",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "azsmnet7530",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/securityRules/azsmnet7530",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test outbound security rule",
                "protocol": "Udp",
                "sourcePortRange": "656",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 501,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-1c28479f0107fe6711a9bbbe2346b609-9c2347838a9ae3d6-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4fe8552e3868a7d460601340ee33f322",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "4449",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "917d504e-937d-4429-ab68-1847d42509f9",
        "x-ms-client-request-id": "4fe8552e3868a7d460601340ee33f322",
        "x-ms-correlation-request-id": "44a98c35-193b-4cf6-ad08-5e2cf295bb83",
        "x-ms-ratelimit-remaining-subscription-reads": "11991",
        "x-ms-request-id": "2e84f03c-63f6-487e-a833-8d892e6b4802",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153728Z:44a98c35-193b-4cf6-ad08-5e2cf295bb83"
      },
      "ResponseBody": {
        "value": [
          {
            "name": "AllowVnetInBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetInBound",
            "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowAzureLoadBalancerInBound",
            "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllInBound",
            "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowVnetOutBound",
            "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/AllowInternetOutBound",
            "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195/defaultSecurityRules/DenyAllOutBound",
            "etag": "W/\"87ea7177-e2fa-4627-a3f0-98252818f227\"",
            "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups/azsmnet3195?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-3f56c0a29b6d66fa3ef9a94883448eff-0cbb68dcdc2586eb-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2ca164809510a587e389971bd78edcbe",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/1f77e9b9-8a4c-46c0-b661-7af36fb9dda4?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:37:28 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/1f77e9b9-8a4c-46c0-b661-7af36fb9dda4?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "88a4aa86-0258-4f2d-a63f-841c39a5c8b5",
        "x-ms-client-request-id": "2ca164809510a587e389971bd78edcbe",
        "x-ms-correlation-request-id": "98c96aab-445d-40ae-bc13-7b7b6db925f3",
        "x-ms-ratelimit-remaining-subscription-deletes": "14999",
        "x-ms-request-id": "1f77e9b9-8a4c-46c0-b661-7af36fb9dda4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153729Z:98c96aab-445d-40ae-bc13-7b7b6db925f3"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/1f77e9b9-8a4c-46c0-b661-7af36fb9dda4?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-3f56c0a29b6d66fa3ef9a94883448eff-aa948087132d072b-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f4ec2afc7793998acd436bdfa1b9cfd2",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:29 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "973d8e4e-4926-4452-a621-26ec037c8a82",
        "x-ms-client-request-id": "f4ec2afc7793998acd436bdfa1b9cfd2",
        "x-ms-correlation-request-id": "d6b34eab-d391-4b81-837c-2bb9be6b9c32",
        "x-ms-ratelimit-remaining-subscription-reads": "11990",
        "x-ms-request-id": "bbbdc15b-bad4-48d4-a1a3-d551734d6c09",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153729Z:d6b34eab-d391-4b81-837c-2bb9be6b9c32"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg182/providers/Microsoft.Network/networkSecurityGroups?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-fd69e951145dcd767be882bf8c4b2d82-b463f3cfbc390628-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a4025483d607648ed466d68b391fdb29",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:37:29 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2a56c667-f334-4f2f-99e5-f5994e0de6a6",
        "x-ms-client-request-id": "a4025483d607648ed466d68b391fdb29",
        "x-ms-correlation-request-id": "07ac16ff-cefd-4302-8fa1-5e4a8651dacf",
        "x-ms-ratelimit-remaining-subscription-reads": "11989",
        "x-ms-request-id": "0c86b5b7-30b2-4d72-9c00-30aa891974f0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153730Z:07ac16ff-cefd-4302-8fa1-5e4a8651dacf"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1030415152",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
